# routes/index.js
@@ -4,7 +4,7 @@ const router = require('express').Router();
 router.use('/', require('./swagger'));
 // router.use('/auth', require('./auth'));
 router.use('/vehicle', require('./vehicle'));
-// router.use('/service', require('./service'));
+router.use('/service', require('./service'));
 // router.use('/booking', require('./booking'));
 
 module.exports = router;
